--- a/index.html
+++ b/index.html
@@ -7,40 +7,49 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <h1 class="logo-text">ottergram</h1>
     </header>
-    <ul class="thumbnail-list">
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
-        </a>
-        <span class="thumbnail-title">Barry</span>
-      </li>
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otther">
-        </a>
-        <span class="thumbnail-title">Robin</span>
-      </li>
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter">
-        </a>
-        <span class="thumbnail-title">Maurice</span>
-      </li>
-      <li class="thumbnail-item">
-        <a href="#">
-          <img clas="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter">
-        </a>
-        <span class="thumbnail-title">Lesley</span>
-      </li>
-      <li class="thumbnail-item">
-        <a href="#">
-          <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
-        </a>
-        <span class="thumbnail-title">Barbara</span>
-      </li>
-    </ul>
+    <main class="main-content">
+      <ul class="thumbnail-list">
+        <li class="thumbnail-item">
+          <a href="#">
+            <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
+          </a>
+          <span class="thumbnail-title">Barry</span>
+        </li>
+        <li class="thumbnail-item">
+          <a href="#">
+            <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otther">
+          </a>
+          <span class="thumbnail-title">Robin</span>
+        </li>
+        <li class="thumbnail-item">
+          <a href="#">
+            <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter">
+          </a>
+          <span class="thumbnail-title">Maurice</span>
+        </li>
+        <li class="thumbnail-item">
+          <a href="#">
+            <img clas="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter">
+          </a>
+          <span class="thumbnail-title">Lesley</span>
+        </li>
+        <li class="thumbnail-item">
+          <a href="#">
+            <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
+          </a>
+          <span class="thumbnail-title">Barbara</span>
+        </li>
+      </ul>
+
+      <div class="detail-image-container">
+        <div class="detail-image-frame">
+          <img class="detail-image" src="img/otter1.jpg" alt="">
+          <span class="detail-image-title">Stayin' Alive</span>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
